# AMillionPlateaus

./: .dockerignore  .gitignore  ALEBRIJE_AI.md  API_CONTRACTS.md  ARCHITECTURE_DIAGRAM.md  CLAUDE.md  Cargo.toml  DECENTRALIZATION.md  Dockerfile  GARUST_INTEGRATION.md  GA_DB.md  GRAPH_SCHEMA.md  README.md  REQUIREMENTS.md  ROADMAP.md  SDLC.md  SYSTEM_ARCHITECTURE.md  TECH_STACK.md  TESTME.md  VISION.md  biome.json  docker-compose.yml  project-specifics.md
.claude/: launch.json
.github/workflows/: ci.yml  deploy-pages.yml  godot.yml  web.yml
apps/godot/: .gitignore  README.md  mp_godot.gdextension  project.godot
apps/godot/scenes/: World3D.tscn
apps/godot/src/: domain_palette.gd  fly_camera.gd  graph_source.gd  graph_source_fixture.gd  graph_source_native.gd  label_plan.gd  minimap.gd  place_node.gd  world.gd
apps/godot/test/: run_tests.gd
apps/web/: .gitignore  .prettierignore  .prettierrc.json  capture.html  eslint.config.mjs  index.html  manifest.webmanifest  package-lock.json  package.json  sw.js
apps/web/src/: authored.test.mjs  bridge.js  bridge.test.mjs  capture.js  capture.test.mjs  cas.js  cas.test.mjs  companion-context.js  companion-context.test.mjs  companion-voice.js  companion-voice.test.mjs  companion.js  course-builder.js  course-builder.test.mjs  cs-curriculum.js  cs-curriculum.test.mjs  curriculum-ids.test.mjs  curriculum.js  curriculum.test.mjs  deliverable.js  deliverable.test.mjs  digest.js  digest.test.mjs  eventbus.js  events.js  events.test.mjs  faded.js  faded.test.mjs  gestures.js  gestures.test.mjs  handoff.js  handoff.test.mjs  hittest.js  hittest.test.mjs  identity.js  identity.test.mjs  import.js  import.test.mjs  imports.test.mjs  katex.js  (+108 more)
crates/mp-crdt/: Cargo.toml
crates/mp-crdt/src/: doc.rs  error.rs  lib.rs  store.rs  sync.rs  vote.rs
crates/mp-crdt/tests/: two_peer.rs
crates/mp-domain/: Cargo.toml
crates/mp-domain/examples/: dump_db.rs  seed_graph.rs
crates/mp-domain/src/: domain.rs  graph.rs  lib.rs  path.rs  types.rs
crates/mp-domain/tests/: persistence.rs
crates/mp-godot/: Cargo.toml
crates/mp-godot/src/: dto.rs  gdext.rs  graph_source.rs  lib.rs  parity.rs  reputation.rs
crates/mp-graph/: Cargo.toml
crates/mp-graph/examples/: bivector_meet_spike.rs  seed_graph.rs
crates/mp-graph/src/: db.rs  error.rs  ga.rs  geo.rs  graph.rs  lib.rs  types.rs
crates/mp-host/: Cargo.toml
crates/mp-host/src/: import.rs  lib.rs  main.rs
crates/mp-host/tests/: host.rs  import.rs
crates/mp-host/tests/fixtures/vault/: Calculus.md  Limits.md  Mechanics.md  Rhythm.md  Stub.md  notes.txt
crates/mp-host/tests/fixtures/vault/.obsidian/: app.json
crates/mp-host/tests/fixtures/vault/sub/: Calculus.md
crates/mp-identity/: Cargo.toml
crates/mp-identity/src/: error.rs  event.rs  keys.rs  lib.rs  recompute.rs  verify.rs
crates/mp-identity/tests/: identity.rs
crates/mp-reputation/: Cargo.toml
crates/mp-reputation/examples/: fog_demo.rs
crates/mp-reputation/src/: lib.rs  reputation.rs  sybil.rs
crates/mp-reputation/tests/: fog.rs
crates/mp-wasm/: Cargo.toml
crates/mp-wasm/src/: convert.rs  error.rs  lib.rs  parity.rs
crates/mp-wasm/tests/: web.rs
crates/mp-wasm/www/: harness.html
docs/: BACKLOG.md  CLI_BRIDGE.md  PARALLEL_DEV_TASKS.md  SYNC_CONTRACT.md
docs/curriculum/: STUDY-GUIDE.md  TUTORIAL.md  lem-free-foundations.md
docs/design/: godot-study-panel.md  openxr-interactions.md
docs/rfcs/: 0001-ga-graph-store-extraction.md  0002-domains-as-bivectors.md  0003-render-pipeline.md
fixtures/obsidian-dense/: README.md
requirements/: 0001-foundation-knowledge-graph.md  0002-ga-reputation-and-fog.md  0003-wasm-graph-bridge.md  0004-crdt-sync.md  0005-web-fog-world-poc.md  0006-persona-creator.md  0007-companion-graph-grounded.md  0008-ga-graph-store-generalization.md  0009-visitor-authored-personas.md  0010-nostr-identity-signed-events.md  0011-plateau-authoring.md  0012-browser-durable-graph.md  0013-bridge-authoring.md  0014-trail-markers.md  0015-vote-crystallize.md  0016-presence.md  0017-native-graph-host.md  0018-webrtc-p2p-sync.md  0019-onboarding-wayfinding.md  0020-plateau-content.md  0021-obsidian-import.md  0022-physicist-lens.md  0023-study-view.md  0024-map-zoom-lod.md  0025-vr-immersive-visualization.md  0026-offline-study-digest.md  0027-seeded-example-resources.md  0028-cross-cutting-resources.md  0029-clickable-bridges.md  0030-topic-mastery.md  0031-community-approved-topics.md  0032-ai-checked-proof-mastery.md  0033-browsable-progress-map.md  0034-cas-checked-answers.md  0035-trusted-master-weighting.md  0036-persist-share-mastery.md  0037-mobile-web.md  0038-author-your-own-domain.md  0039-learning-paths.md  0043-view-pipeline-phase1.md  (+53 more)
scripts/: build-godot-ext.sh  cli-bridge.py  install-godot.sh  serve.py  smoke.mjs  smoke.sh  start-dev.sh  start-godot.sh  start-web.sh
specs/: 0001-mp-graph-foundation.md  0002-ga-reputation-and-fog.md  0003-wasm-graph-bridge.md  0004-crdt-sync.md  0005-web-fog-world-poc.md  0006-persona-creator.md  0007-companion-graph-grounded.md  0008-ga-graph-store-generalization.md  0009-visitor-authored-personas.md  0010-nostr-identity-signed-events.md  0011-plateau-authoring.md  0012-browser-durable-graph.md  0013-bridge-authoring.md  0014-trail-markers.md  0015-vote-crystallize.md  0016-presence.md  0017-native-graph-host.md  0018-webrtc-p2p-sync.md  0019-onboarding-wayfinding.md  0020-plateau-content.md  0021-obsidian-import.md  0022-physicist-lens.md  0023-study-view.md  0024-map-zoom-lod.md  0025-vr-immersive-visualization.md  0026-offline-study-digest.md  0027-seeded-example-resources.md  0028-cross-cutting-resources.md  0029-clickable-bridges.md  0030-topic-mastery.md  0031-community-approved-topics.md  0032-ai-checked-proof-mastery.md  0033-browsable-progress-map.md  0034-cas-checked-answers.md  0035-trusted-master-weighting.md  0036-persist-share-mastery.md  0037-mobile-web.md  0038-author-your-own-domain.md  0039-learning-paths.md  0043-view-pipeline-phase1.md  (+5 more)
workers/pair-relay/: README.md  wrangler.jsonc
workers/pair-relay/src/: index.js
(+31 files in other folders)
