[package]
name = "mp-crdt"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
mp-graph = { workspace = true }
automerge = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
redb = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
