[package]
name = "mp-crdt"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
# `storage` (redb-backed CrdtStore) is on by default for native builds; the
# wasm consumer opts out with `default-features = false` to get just the sync
# core (CrdtDoc / SyncSession / ResourceVote), since redb does not build for
# wasm32. See SPEC-0005 §2.1.
default = ["storage"]
storage = ["dep:redb"]

[dependencies]
# AMP vocabulary + the re-exported geometric store (mp-graph). See SPEC-0008.
mp-domain = { workspace = true }
automerge = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
redb = { workspace = true, optional = true }
thiserror = { workspace = true }

# On wasm32, `uuid` (used for ids and for automerge's `ActorId::random`) needs a
# randomness source; the `js` feature wires it to the Web Crypto API. Target-gated
# so native builds are unaffected. This makes the sync core self-sufficient on
# wasm — `cargo build -p mp-crdt --target wasm32-unknown-unknown
# --no-default-features` links without the consumer having to supply it
# (SPEC-0005 §2.1 / R-0005 AC1).
[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { workspace = true, features = ["js"] }

[dev-dependencies]
tempfile = "3"
