[package]
name = "mp-graph"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
garust = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
petgraph = { workspace = true }
redb = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
