[package]
name = "mp-reputation"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
garust = { workspace = true }
# AMP vocabulary (PlateauNode/Bridge/WizardReputation/…) + the re-exported
# geometric store (mp-graph) it sits on. See SPEC-0008.
mp-domain = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
