[package]
name = "mp-wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Thin bridge: delegates all graph/GA/reputation math to the Rust core. The
# reputation *engine* mutators (mp-reputation) are a Phase-2 non-goal — reputation
# crosses the boundary as JSON and is decoded into mp-domain's WizardReputation.
# mp-domain re-exports the generic geometric store (mp-graph). See SPEC-0008.
mp-domain = { workspace = true }
# The CRDT sync core, without its redb-backed `storage` feature (redb does not
# build for wasm32). Gives us CrdtDoc / SyncSession / ResourceVote only.
# See SPEC-0005 §2.1.
mp-crdt = { workspace = true, default-features = false }
wasm-bindgen = { workspace = true }
serde-wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

# On wasm32 the engine's `Uuid::new_v4` needs a browser randomness source;
# uuid's `js` feature wires getrandom to the Web Crypto API. Host builds don't
# need it, so it's target-gated.
[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { workspace = true, features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
# Used by tests/web.rs to decode the `nearest_plateaus` JS array back into Rust
# structs so the binding's marshalling + ordering can be asserted (R-0007).
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
